Pushing the Changes for Page Elements

--- a/BDD.Playwright.Origami/BDD.Playwright.GBIZ.csproj
+++ b/BDD.Playwright.Origami/BDD.Playwright.GBIZ.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="PageElements\" />
     <Folder Include="Pages\AgentPages\" />
     <Folder Include="Pages\PublicPages\" />
   </ItemGroup>
