Login page and footerpage

--- a/BDD.Playwright.Origami/BDD.Playwright.GBIZ.csproj
+++ b/BDD.Playwright.Origami/BDD.Playwright.GBIZ.csproj
@@ -12,8 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\AgentPages\" />
     <Folder Include="Pages\PublicPages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Selenium.Support" Version="4.37.0" />
   </ItemGroup>
 
   <PropertyGroup>
